--- a/libgcc/ChangeLog
+++ b/libgcc/ChangeLog
@@ -3,6 +3,19 @@
 	Backport from mainline
 	2015-09-24  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
+	* config.host (*-*-solaris2*): Add t-crtstuff-pic to tmake_file.
+	Add crtbeginS.o, crtendS.o to extra_parts if libgcc_cv_solaris_crts.
+	* config/sol2/gmon.c: (monstartup): Don't write trailing NUL of
+	messages.
+	(internal_mcount): Likewise.
+	* config/sol2/t-sol2 (crtp.o, crtpg.o, gmon.o): Compile with
+	crt_compile, add CRTSTUFF_T_CFLAGS_S.
+
+2015-10-01  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	Backport from mainline
+	2015-09-24  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
 	* configure.ac (libgcc_cv_solaris_crts): New test.
 	* configure: Regenerate.
 	* config.in: Regenerate.
