--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2015-10-01  Mikael Morin  <mikael@gcc.gnu.org>
+
+	PR fortran/67721
+	* gfortran.dg/alloc_comp_deep_copy_3.f03: New.
+
 2015-10-01  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc.dg/lto/pr55113_0.c: Skip on all x86 targets.
