S/390: Add missing brackets.
gcc/
	Backport from mainline
	2015-09-15  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

        * config/s390/s390.c (s390_const_operand_ok): Add missing
	brackets.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228372 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2015-10-02  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	Backport from mainline
+	2015-09-15  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+        * config/s390/s390.c (s390_const_operand_ok): Add missing
+	brackets.
+
 2015-10-01  Marek Polacek  <polacek@redhat.com>
 
 	Backport from mainline
