--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,5 +1,11 @@
 2015-10-01  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/67616
+	* primary.c (gfc_match_structure_constructor): Use a possibly
+	host-associated symtree to prevent ICE.
+
+2015-10-01  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/66979
 	* io.c (gfc_resolve_filepos): Check for a UNIT number.  Add a nearby
 	missing 'return false'.
