2015-10-02  Steven G. Kargl  <kargl@gcc.gnu.org>
	PR fortran/67802
	* decl.c (add_init_expr_to_sym): Numeric constant for character
	length must be an INTEGER.

2015-10-02  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/67802
	* gfortran.dg/pr67802.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228430 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,5 +1,11 @@
 2015-10-01  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/67802
+	* decl.c (add_init_expr_to_sym): Numeric constant for character
+	length must be an INTEGER.
+
+2015-10-01  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/67616
 	* primary.c (gfc_match_structure_constructor): Use a possibly
 	host-associated symtree to prevent ICE.
