PR tree-optimization/67821 	* tree-ssanames.c (duplicate_ssa_name_range_info): Remove an assert.
	* gcc.dg/torture/pr67821-2.c: New test.
	* gcc.dg/torture/pr67821.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228499 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2015-10-05  Marek Polacek  <polacek@redhat.com>
+
+	Backport from mainline
+	2015-10-05  Marek Polacek  <polacek@redhat.com>
+
+	PR tree-optimization/67821
+	* tree-ssanames.c (duplicate_ssa_name_range_info): Remove an assert.
+
 2015-10-03  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	Backport from mainline
