--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,6 +1,15 @@
 2015-10-05  Marek Polacek  <polacek@redhat.com>
 
 	Backport from mainline
+	2015-10-05  Marek Polacek  <polacek@redhat.com>
+
+	PR tree-optimization/67821
+	* gcc.dg/torture/pr67821-2.c: New test.
+	* gcc.dg/torture/pr67821.c: New test.
+
+2015-10-05  Marek Polacek  <polacek@redhat.com>
+
+	Backport from mainline
 	2015-10-02  Marek Polacek  <polacek@redhat.com>
 
 	PR c/67730
