PR target/67849 gcc/ 	* config/i386/sse.md (define_split vec_select/V8FI): Restrict 	split for upper-bank registers when target does not support 	AVX512VL. 	(define_insn "vec_extract_lo_<mode><mask_name>"): Restrict 	split when target does not support AVX512VL. gcc/testsuite/ 	* gcc.target/i386/pr67480.c: New test.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228709 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2015-10-12  Alexander Fomin  <alexander.fomin@intel.com>
+	    Kirill Yukhin  <kirill.yukhin@intel.com>
+
+	PR target/67849
+	* config/i386/sse.md (define_split vec_select/V8FI): Restrict
+	split for upper-bank registers when target does not support
+	AVX512VL.
+	(define_insn "vec_extract_lo_<mode><mask_name>"): Restrict
+	split when target does not support AVX512VL.
+
 2015-10-12  Richard Biener  <rguenther@suse.de>
 
 	Backport from mainline
