--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2015-10-12  Alexander Fomin  <alexander.fomin@intel.com>
+	    Kirill Yukhin  <kirill.yukhin@intel.com>
+
+	PR target/67849
+	* gcc.target/i386/pr67480.c: New test.
+
 2015-10-06  Richard Biener  <rguenther@suse.de>
 
 	Backport from mainline
