/cp 2015-10-12  Paolo Carlini  <paolo.carlini@oracle.com>
	Backport from mainline
	2015-06-15  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51048
	* decl2.c (no_linkage_error): Do not issue a permerror if the DECL
	using a local type is pure virtual.

/testsuite
2015-10-12  Paolo Carlini  <paolo.carlini@oracle.com>

	Backport from mainline
	2015-06-15  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51048
	* g++.dg/cpp0x/local-type1.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228714 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2015-10-12  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	Backport from mainline
+	2015-06-15  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/51048
+	* g++.dg/cpp0x/local-type1.C: New.
+
 2015-10-12  Alexander Fomin  <alexander.fomin@intel.com>
 	    Kirill Yukhin  <kirill.yukhin@intel.com>
 
