Correct x86 backend stack alignment adjustment
Add missing -1 in x86 backend stack alignment adjustment.  Trunk is OK
with ROUND_UP macro.

	PR target/67940
	* config/i386/i386.c (ix86_compute_frame_layout): Correct
	stack alignment adjustment.
	(ix86_expand_prologue): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@228732 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2015-10-12  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/67940
+	* config/i386/i386.c (ix86_compute_frame_layout): Correct
+	stack alignment adjustment.
+	(ix86_expand_prologue): Likewise.
+
 2015-10-12  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline
